--- a/index.html
+++ b/index.html
@@ -273,10 +273,10 @@
 
     <!-- Paper video. -->
       <hr class="divider" />
-      <div class="container" style="max-width: 500px;">
-        <div class="columns is-centered has-text-centered">
+      <div class="columns is-centered has-text-centered">
           <h2 class="title is-3">Our Generated Objects by One-Pass Feedforward Testing</h2>
-        </div>
+      </div>
+      <div class="container" style="max-width: 700px; max-height: 700px;">
         <div class="columns captioned_videos">
             <div class="column">
                 <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
@@ -296,7 +296,14 @@
                 </video>
                 <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
            </div>
+           <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a koala sitting on a stone and wearing a cape and wearing a cowboy hat.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a koala sitting on a stone and wearing a cape and wearing a cowboy hat</h6>
+           </div>
         </div>
+        <canvas height="252" class="videoMerge" id="ex2Merge" width="1002"></canvas>
         <div class="columns captioned_videos">
             <div class="column">
                 <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
@@ -316,7 +323,14 @@
                 </video>
                 <h6 class="caption">a dog wearing a tie  and wearing a party hat</h6>
            </div>
+           <div class="column">
+                <video controls="" loop="" style="width: 100%; height: 100%; object-fit: fill">
+                    <source src="./static/videos/a koala sitting on a stone and wearing a cape and wearing a cowboy hat.mp4" type="video/mp4">
+                </video>
+                <h6 class="caption">a koala sitting on a stone and wearing a cape and wearing a cowboy hat</h6>
+           </div>
         </div>
+
       </div>
     <!--/ Paper video. -->
   </div>
